--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "myapp",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
-  "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^0.8.1",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-sass": "^0.7.3",
-    "grunt-contrib-watch": "^0.6.1",
-    "jit-grunt": "^0.7.0",
-    "time-grunt": "^0.4.0"
-  },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-surge": "^0.5.2"
+    "autoprefixer": "^6.3.6",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-postcss": "^6.1.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-watch": "^4.3.5",
+    "run-sequence": "^1.1.5"
+  },
+  "dependencies": {
+    "asynquence": "^0.9.0",
+    "node-static": "^0.7.7"
   }
 }
