--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "run-sequence": "^1.1.5"
   },
   "dependencies": {
-    "asynquence": "^0.9.0",
-    "node-static": "^0.7.7"
+    "express": "^4.13.4"
   }
 }
