--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "myapp",
-  "version": "3.1.0",
+  "name": "WheelPicker",
+  "version": "3.3.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
