--- a/package.json
+++ b/package.json
@@ -7,19 +7,17 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
+    "cssnano": "^3.5.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-connect": "^4.0.0",
     "gulp-postcss": "^6.1.0",
     "gulp-sass": "^2.2.0",
-    "gulp-surge": "^0.1.0",
-    "gulp-watch": "^4.3.5",
-    "run-sequence": "^1.1.5",
-    "postcss-minify-selectors": "^2.0.4",
     "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-surge": "^0.1.0",
     "gulp-uglify": "^1.5.3",
-    "cssnano": "^3.5.2"
-  },
-  "dependencies": {
-    "express": "^4.13.4"
+    "gulp-watch": "^4.3.5",
+    "postcss-minify-selectors": "^2.0.4",
+    "run-sequence": "^1.1.5"
   }
 }
